--- a/avatar - four nations restored/localisation/00_ATLA_new_title_prefixes.csv
+++ b/avatar - four nations restored/localisation/00_ATLA_new_title_prefixes.csv
@@ -1,4 +1,4 @@
-#CODE;#English;;;;#POLISH BC WHY NOT;;;;#Polish is not supported but we can use other lang as a base of it but it would be without polish special characters. Saddo
+#CODE;#English;;;;POLISH BC WHY NOT;;;;Polish is not supported but we can use other lang as a base of it but it would be without polish special characters. Saddo
 #NORTHERN EARTH;X;;;;#Kultura Polnocnego Krolewstwa Ziemi;;;;x
 kingdom_of_northern_earth;Province of;;;;Prowincja;;;;x
 duchy_of_northern_earth;Commandery of;;;;Komanderia;;;;x
