--- a/avatar - four nations restored/localisation/ATLA_customizable_localisation.csv
+++ b/avatar - four nations restored/localisation/ATLA_customizable_localisation.csv
@@ -48,3 +48,10 @@ String_pet_name_english_heaven;Heaven;;;;;;;;;;;;;x
 String_pet_name_english_autumn;Autumn;;;;;;;;;;;;;x
 String_pet_name_english_autumn2;Fall;;;;;;;;;;;;;x
 String_pet_name_english_spring;Spring;;;;;;;;;;;;;x
+GetQuanHolderTitleName_ImpBlood;Prince of Imperial Blood;;;;;;;;;;;;;x
+GetQuanHolderTitleName_ImpBlood_female;Princess of Imperial Blood;;;;;;;;;;;;;x
+GetQuanHolderTitleName_GrandDuke;Grand Duke;;;;;;;;;;;;;x
+GetQuanHolderTitleName_GrandDuke_female;Grand Duchess;;;;;;;;;;;;;x
+GetColorClanAuthority_green;§G[global_Clanauthority.Getvalue]§!;;;;;;;;;;;;;x
+GetColorClanAuthority_yellow;§Y[global_Clanauthority.Getvalue]§!;;;;;;;;;;;;;x
+GetColorClanAuthority_red;§R[global_Clanauthority.Getvalue]§!;;;;;;;;;;;;;x
