--- a/avatar - four nations restored/localisation/customizable_localisation/00_customizable_localisation.txt
+++ b/avatar - four nations restored/localisation/customizable_localisation/00_customizable_localisation.txt
@@ -5207,3 +5207,29 @@ defined_text = {
 		}
 	}	
 }
+
+defined_text = {
+	name = GetColorClanAuthority
+
+	text = {
+		localisation_key = GetColorClanAuthority_green
+		trigger = {
+			check_variable = { which = global_Clanauthority value > 60 }
+		}
+	}
+	text = {
+		localisation_key = GetColorClanAuthority_yellow
+		trigger = {
+			check_variable = { which = global_Clanauthority value >= 40 }
+			check_variable = { which = global_Clanauthority value <= 60 }
+		}
+	}
+	text = {
+		localisation_key = GetColorClanAuthority_red
+		trigger = {
+			trigger = {
+				check_variable = { which = global_Clanauthority value < 60 }
+			}
+		}
+	}
+}
