--- a/avatar - four nations restored/localisation/000_atla_custom_titles.csv
+++ b/avatar - four nations restored/localisation/000_atla_custom_titles.csv
@@ -297,8 +297,8 @@ count_title_ruler_consort_female_southern_water;Chieftess;;;;;;;;;;;;;x
 count_title_ruler_consort_southern_water;Chief;;;;;;;;;;;;;x
 count_title_ruler_consort_female_northern_water;Chieftess;;;;;;;;;;;;;x
 count_title_ruler_consort_northern_water;Chief;;;;;;;;;;;;;x
-UNUSED;UNUSED;;;;;;;;;;;;;x
-UNUSED;UNUSED;;;;;;;;;;;;;x
+k_quan;Grand Duchy of Quan;;;;;;;;;;;;;x
+k_quan_adj;Quanian;;;;;;;;;;;;;x
 UNUSED;UNUSED;;;;;;;;;;;;;x
 UNUSED;UNUSED;;;;;;;;;;;;;x
 UNUSED;UNUSED;;;;;;;;;;;;;x
