--- a/avatar - four nations restored/localisation/0_title_barony_names.csv
+++ b/avatar - four nations restored/localisation/0_title_barony_names.csv
@@ -3195,3 +3195,13 @@ b_rangdol;Rangdol;;;;;;;;;;;x
 b_taihang;Taihang;;;;;;;;;;;x
 b_lor;Lor;;;;;;;;;;;x
 b_lum;Lum;;;;;;;;;;;x
+b_quan;Quan;;;;;;;;;;;x
+b_crouching_tiger;Citadel of Crouching Tiger;;;;;;;;;;;x
+b_long_wang_fortress;Long-Wang Fortress;;;;;;;;;;;x
+b_quan_monastery;Quan Monastery;;;;;;;;;;;x
+b_hou-ting;Hou-Ting;;;;;;;;;;;x
+b_hao;Hao;;;;;;;;;;;x
+b_xingliang;Xingliang;;;;;;;;;;;x
+b_zhenxing;Zhenxing;;;;;;;;;;;x
+b_pingtong;Pingtong;;;;;;;;;;;x
+b_qiwei_island;Qiwei Island;;;;;;;;;;;x
