--- a/avatar - four nations restored/localisation/0_title_county_names.csv
+++ b/avatar - four nations restored/localisation/0_title_county_names.csv
@@ -1045,3 +1045,5 @@ c_jamtso;Jamtso;;;;;;;;;;;;;x
 c_Jamtso_adj;Jamtso;;;;;;;;;;;;;x
 c_kelden;Kelden;;;;;;;;;;;;;x
 c_kelden_adj;Kelden;;;;;;;;;;;;;x
+c_quan;Quan;;;;;;;;;;;;;x
+c_quan_adj;Quanian;;;;;;;;;;;;;x
