--- a/avatar - four nations restored/localisation/0_title_duchy_names.csv
+++ b/avatar - four nations restored/localisation/0_title_duchy_names.csv
@@ -355,3 +355,5 @@ d_sangria;Sangria;;;;;;;;;;;;;x
 d_namtso;Namtso;;;;;;;;;;;;;x
 d_kangaroo_island;Kangaroo Island;;;;;;;;;;;;;x
 d_the_divided;The Divided;;;;;;;;;;;x
+d_quan;Quan;;;;;;;;;;;x
+d_quan_adj;Quanian;;;;;;;;;;;x
