--- a/avatar - four nations restored/localisation/ATLA_customizable_localisation.csv
+++ b/avatar - four nations restored/localisation/ATLA_customizable_localisation.csv
@@ -55,3 +55,4 @@ GetQuanHolderTitleName_GrandDuke_female;Grand Duchess;;;;;;;;;;;;;x
 GetColorClanAuthority_green;is §G[global_Clanauthority.GetValue]§!;;;;;;;;;;;;;x
 GetColorClanAuthority_yellow;is §Y[global_Clanauthority.GetValue]§!;;;;;;;;;;;;;x
 GetColorClanAuthority_red;is §R[global_Clanauthority.GetValue]§!;;;;;;;;;;;;;x
+GetQuanHolderTitleName_fallback;Grand Duke;;;;;;;;;;;;;x
