--- a/avatar - four nations restored/localisation/customizable_localisation/00_customizable_localisation.txt
+++ b/avatar - four nations restored/localisation/customizable_localisation/00_customizable_localisation.txt
@@ -5157,7 +5157,9 @@ defined_text = {
 
 defined_text = {
 	name = GetQuanHolderTitleName
-
+	fallback_text = {
+		localisation_key = GetQuanHolderTitleName_fallback
+	}
 	text = {
 		localisation_key = GetQuanHolderTitleName_ImpBlood
 		trigger = {
