--- a/avatar - four nations restored/localisation/ATLA_governments.csv
+++ b/avatar - four nations restored/localisation/ATLA_governments.csv
@@ -35,3 +35,7 @@ ze_fire_administration_laws_1_desc;Late Feudalism;;;;;;;;;;;;x;
 ze_fire_administration_laws_2;Imperial;;;;;;;;;;;;;x
 ze_fire_administration_laws_2_desc;Fire Imperialism - Upon adopting this Administration, Fire Feudal will promote to Fire Imperialism;;;;;;;;;;;;;x
 focus_hunting_title;Mastery;;;;;;;;;;;;;
+clan_government;Clan;;;;;;;;;;;;;
+clan_government_desc;
+clan_federation;Clan Federation;;;;;;;;;;;;;
+clan_federation_desc;
