--- a/avatar - four nations restored/localisation/customizable_localisation/00_customizable_localisation.txt
+++ b/avatar - four nations restored/localisation/customizable_localisation/00_customizable_localisation.txt
@@ -90,6 +90,7 @@
 #GetRootMandateModifier
 #GetExistingRCFactions
 #GetQuanHolderTitleName (aka bastardised flavorisation)
+#GetColorClanAuthority
 
 ###RELATIONSHIPS###
 defined_text = {
