--- a/avatar - four nations restored/localisation/ATLAEKstory.csv
+++ b/avatar - four nations restored/localisation/ATLAEKstory.csv
@@ -82,9 +82,4 @@ peacefulendingrest;Consti-what?;IPSEM
 peacefulendingavatar;Another step to world peace.;LOREM
 youaredednobigsurpise;You die!;IPSEM
 EVTDESCEKSTORY23;The Avatar sees trough your pathetic ruse, and strikes you down with righteous fury!;LOREM
-#Spicy Memes;#Bringed to you by Typical;#Crusader
-
-#Dongfang
-QuanYearlycheckdesc;Yada Yada yearly gain;x
-QuanYearlycheckopt;kok;x
-QuanYearlycheck;CA gained [Root.CAgain.GetValue], CA gained from traits [Root.CA_mileducationgain.GetValue], from tributes [Root.CA_tributesgain.GetValue], from laws [Root.CA_lawgain.GetValue];Crusader
+#Spicy Memes bringed to you by Typical Crusader
