--- a/avatar - four nations restored/localisation/0_title_duchy_names.csv
+++ b/avatar - four nations restored/localisation/0_title_duchy_names.csv
@@ -373,3 +373,7 @@ d_kangaroo_island;Kangaroo Island;;;;;;;;;;;;;x
 d_the_divided;The Divided;;;;;;;;;;;x
 d_quan;Quan;;;;;;;;;;;x
 d_quan_adj;Quanian;;;;;;;;;;;x
+d_embarra;Nayong;;;;;;;;;;;x
+d_nagang;Nagang;;;;;;;;;;;x
+d_baiyin;Baiyin;;;;;;;;;;;x
+d_yinchuan;Yinchuan;;;;;;;;;;;x
