--- a/avatar - four nations restored/localisation/customizable_localisation/00_customizable_localisation.txt
+++ b/avatar - four nations restored/localisation/customizable_localisation/00_customizable_localisation.txt
@@ -91,6 +91,7 @@
 #GetExistingRCFactions
 #GetQuanHolderTitleName (aka bastardised flavorisation)
 #GetColorClanAuthority
+#GetAgeGeneral
 
 ###RELATIONSHIPS###
 defined_text = {
@@ -5236,3 +5237,42 @@ defined_text = {
 		}
 	}
 }
+
+defined_text = {
+	name = GetAgeGeneral
+	
+	text = {
+		localisation_key = GetAgeGeneral_child
+		trigger = {
+			ROOT = {
+				is_adult = no
+			}
+		}
+	}
+	text = {
+		localisation_key = GetAgeGeneral_young
+		trigger = {	
+			ROOT = {
+				age >= 16
+				age <= 35
+			}
+		}
+	}
+	text = {
+		localisation_key = GetAgeGeneral_middleaged
+		trigger = {	
+			ROOT = {
+				age >= 36
+				age <= 55
+			}
+		}
+	}
+	text = {
+		localisation_key = GetAgeGeneral_old
+		trigger = {	
+			ROOT = {
+				age >= 56
+			}
+		}
+	}
+}	
