--- a/avatar - four nations restored/localisation/00_ATLA_Quan.csv
+++ b/avatar - four nations restored/localisation/00_ATLA_Quan.csv
@@ -140,6 +140,11 @@ QuanColonisation;Oi Mate choose a holding type;;;;;;;;;;x
 QuanChoosenCastle;Castle;;;;;;;;;;x
 QuanChoosenCity;City;;;;;;;;;;x
 
+#Day of Reconing
+QuanMorningTit;Day of Reconing;;;;;;;;;;x
+QuanMorningDesc;
+QuanMorningOpt1;
+QuanMorningOpt2;
 
 #CBs
 
