--- a/avatar - four nations restored/localisation/0_title_duchy_names.csv
+++ b/avatar - four nations restored/localisation/0_title_duchy_names.csv
@@ -372,5 +372,5 @@ d_namtso;Namtso;;;;;;;;;;;;;x
 d_kangaroo_island;Kangaroo Island;;;;;;;;;;;;;x
 d_the_divided;The Divided;;;;;;;;;;;x
 d_earth_monarchism;Earth Monarchism;;;;;;;;;;;x
-d_
-d_vanguard;Imperial Majesty;;;;;;;;;;;x
+d_imperial_cult;Grand Secretariat of Imperial Cult;;;;;;;;;;;x
+d_vanguard;Guardians of Imperial Majesty;;;;;;;;;;;x
